style: Apply style for fixed position state

--- a/src/components/AddLinkBar/AddLinkBar.module.css
+++ b/src/components/AddLinkBar/AddLinkBar.module.css
@@ -1,9 +1,23 @@
+.addLinkBarContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e7effb;
+  width: 100%;
+  padding: 60px 0 90px;
+  @media (max-width: 1124px) {
+  }
+
+  @media (max-width: 767px) {
+    padding: 24px 32px 40px;
+  }
+}
+
 .addLinkBar {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   padding: 16px 20px;
-  margin: 60px auto 90px;
   border-radius: 15px;
   border: 1px solid #6d6afe;
   background: #fff;
@@ -29,11 +43,9 @@
   }
 
   @media (max-width: 1124px) {
-    margin: 60px 32px 90px;
     width: 664px;
   }
   @media (max-width: 767px) {
-    margin: 24px 32px 40px;
     padding: 8px 10px;
     width: 305px;
 
@@ -50,4 +62,12 @@
       height: 16px;
     }
   }
+}
+
+.fixed {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  padding: 24px 0 24px;
+  z-index: 5;
 }
