refactor: Simply path import path using path alias

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -25,5 +25,5 @@
   height: 24px;
   top: 16px;
   right: 16px;
-  background-image: url(../../assets/images/close.png);
+  background-image: url(@assets/images/close.png);
 }
