--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -11,12 +11,14 @@
   text-decoration-line: none;
   flex-shrink: 0;
   font-family: Pretendard;
-  &:hover,
-  &:focus {
-    cursor: pointer;
-  }
+}
 
-  @media (max-width: 767px) {
+.btn:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .btn {
     padding: 10px 16px;
     font-size: 14px;
   }
