--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap');
+
 .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 70px 360px;
+  padding: 70px 360px 0;
   min-height: 100vh;
+  font-family: Pretendard, sans-serif;
 }
 
 .mainSection {
@@ -22,7 +25,6 @@
   line-height: 80px;
   width: 708px;
   text-align: center;
-  font-family: Pretendard, sans-serif;
 }
 
 .addLinkButton {
@@ -34,6 +36,45 @@
   position: relative;
   width: 1118px;
   height: 659px;
+}
+
+.featureSection {
+  width: 100vw;
+  background-color: #fff;
+  padding: 120px 461px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 100px;
+}
+
+.featureCard {
+  display: flex;
+  justify-content: space-between;
+  gap: 157px;
+  align-items: center;
+  width: 998px;
+}
+
+.featureDescription {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  color: #6b6b6b;
+  margin-right: 0.625em;
+  font-family: Abel;
+  font-size: 1em;
+  line-height: 150%;
+  font-family: inherit;
+}
+
+.featureDescriptionHeading {
+  color: #000;
+  font-size: 3em;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -0.3px;
 }
 
 .gradient1 {
