--- a/styles/AuthForm.module.scss
+++ b/styles/AuthForm.module.scss
@@ -32,17 +32,7 @@
 
 .authInput {
   width: 100%;
-  border: none; /* Remove border from authInput to avoid double border */
-}
-
-.toggleButton {
-  position: relative;
-  width: 16px;
-  height: 16px;
-
-  &:hover {
-    filter: brightness(0);
-  }
+  border: none;
 }
 
 .errorMessage {
