--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,14 @@
 body {
   background-color: var(--background-color);
   font-family: Pretendard, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+@layer components {
+  #__next {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
 }
