--- a/components/FolderToolBar/FolderToolBar.module.scss
+++ b/components/FolderToolBar/FolderToolBar.module.scss
@@ -114,3 +114,13 @@
     }
   }
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
