--- a/components/LinkCardList/LinkCardList.module.scss
+++ b/components/LinkCardList/LinkCardList.module.scss
@@ -51,3 +51,13 @@
   text-align: center;
   padding: 40px;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
