머지 컨플릭트 피해서 그냥 한꺼번에...

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,22 @@
 body {
   background-color: var(--background-color);
   font-family: Pretendard, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+@layer components {
+  #__next {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: inherit;
+  height: inherit;
 }
